2014-01-22  Jeff Law  <law@redhat.com>

	PR tree-optimization/59597
	* tree-ssa-threadupdate.c (dump_jump_thread_path): Move to earlier
	in file.  Accept new argument REGISTERING and use it to modify
	dump output appropriately.
	(register_jump_thread): Corresponding changes.
	(mark_threaded_blocks): Reinstate code to cancel unprofitable
	thread paths involving joiner blocks.  Add code to dump cancelled
	jump threading paths.

2014-01-22  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/59477
	* lra-constraints.c (inherit_in_ebb): Process call for living hard
	regs.  Update reloads_num and potential_reload_hard_regs for all
	insns.

2014-01-22  Tom Tromey  <tromey@redhat.com>

	* config/i386/i386-interix.h (i386_pe_unique_section): Don't use
	PARAMS.
	* config/cr16/cr16-protos.h (notice_update_cc): Don't use PARAMS.

2014-01-21  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/59896
	* lra-constraints.c (process_alt_operands): Check unused note for
	matched operands of insn with no output reloads.

2014-01-21  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/mips.c (mips_move_to_gpr_cost): Add M16_REGS case.
	(mips_move_from_gpr_cost): Likewise.

2014-01-21  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/59858
	* lra-constraints.c (SMALL_REGISTER_CLASS_P): Use
	ira_class_hard_regs_num.
	(process_alt_operands): Increase reject for dying matched operand.

2014-01-21  Jakub Jelinek  <jakub@redhat.com>

	PR target/59003
	* config/i386/i386.c (expand_small_movmem_or_setmem): If mode is
	smaller than size, perform several stores or loads and stores
	at dst + count - size to store or copy all of size bytes, rather
	than just last modesize bytes.

2014-01-20  DJ Delorie  <dj@redhat.com>

	* config/rl78/rl78.c (rl78_propogate_register_origins): Verify
	that CLOBBERs are REGs before propogating their values.

2014-01-20  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/59789